# Reddit-Scout-Pro-v2

./: .gitignore  .replit  DEPLOYMENT-COMPARISON.md  DEPLOYMENT.md  IMPLEMENTATION-GUIDE.md  MIGRATION-GUIDE.md  README.md  README_MULTI_USER.md  REFACTORING-PLAN.md  RENDER-DEPLOYMENT-BEGINNER.md  RENDER-DEPLOYMENT.md  REPLIT-AI-AGENT-FIX.md  REPLIT-AI-AGENT-INSTRUCTIONS.md  REPLIT-DEPLOYMENT-STEPS.md  REPLIT-SETUP.md  app.py  app_multi_user.py  env-template.txt  env.example  extraer_youtube_videos.py  main.py  pyproject.toml  reddit-credentials-setup.md  reddit_scout_fallback.db  render-multiuser-env.txt  render.yaml  replit.nix  requirements-test.txt  requirements.txt  requirements_deployment.txt  requirements_info.txt  requirements_multi_user.txt  requirements_multiuser_deploy.txt  setup_alias.sh  start.py  start.sh  streamlit_app.py  test_local.py  test_setup.py
.streamlit/: config.toml
fintech-scout-pro/.streamlit/: secrets.toml.example
src/: __init__.py  config.py  dashboard.py  reddit_scout.py
src/auth/: auth_manager.py  decorators.py
src/core/: encryption.py  reddit_scout_multi.py
src/database/: database.py  models.py
src/ui/pages/: api_keys.py  login.py
