[tool.poetry]
name = "reddit-scout-pro"
version = "1.0.0"
description = "Reddit Scout Pro - Comprehensive Reddit analysis and discovery tool"
authors = ["Martin <martin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
praw = "^7.7.1"
pandas = "^2.2.2"
plotly = "^5.24.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
langdetect = "^1.0.9"
wordcloud = "^1.9.3"
textblob = "^0.18.0"
emoji = "^2.12.1"
pytz = "^2024.1"
matplotlib = "^3.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100 